--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,7 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
+package-lock.json
 
 # TypeScript v1 declaration files
 typings/
@@ -47,6 +48,7 @@ typings/
 
 # Optional eslint cache
 .eslintcache
+.eslintignore
 
 # Optional REPL history
 .node_repl_history
